# win-video

./: Cargo.toml  LICENSE  README.md
src/: devices.rs  i_capture.rs  lib.rs  monitor.rs  monitor_frame.rs
src/devices/: activated_device.rs  camera.rs  cameras.rs  device_size.rs  dimensions.rs  monitor.rs  monitor_info.rs  video_devices.rs
